deployment-canary/canary-deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: flask-api-canary-rollout
  namespace: prod
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: flask-api-canary
      stableService: flask-api-stable
      trafficRouting:
        nginx:
          # Reference to an Ingress which has a rule pointing to the stable service (e.g. flask-api-stable)
          # This ingress will be cloned with a new name, in order to achieve NGINX traffic splitting.
          stableIngress: flask-api-ingress-stable
      steps:
      - setWeight: 50
      - pause: {}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api
        image: stefankochev/argo-kaniko-test:41a382c73fea10d0e8adfc3d005cbb3aee1619bc
        imagePullPolicy: 'IfNotPresent'
        ports:
          - name: http
            containerPort: 5000
            protocol: TCP
