deployment-canary/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-stable
  namespace: prod
  labels:
    app: flask-api
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: flask-api
---
apiVersion: v1
kind: Service
metadata:
  name: flask-api-canary
  namespace: prod
  labels:
    app: flask-api
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: flask-api
